--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^5.5.2",
     "@remix-run/css-bundle": "^2.2.0",
     "@remix-run/node": "^2.2.0",
     "@remix-run/react": "^2.2.0",
     "@remix-run/serve": "^2.2.0",
     "isbot": "^3.6.8",
+    "jsdoc": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0"
