--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/node": "^2.2.0",
     "@remix-run/react": "^2.2.0",
     "@remix-run/serve": "^2.2.0",
+    "bcryptjs": "^2.4.3",
     "isbot": "^3.6.8",
     "jsdoc": "^4.0.2",
     "react": "^18.2.0",
