--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@remix-run/react": "^2.2.0",
     "@remix-run/serve": "^2.2.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "isbot": "^3.6.8",
     "jsdoc": "^4.0.2",
     "react": "^18.2.0",
